--- a/HomeWork1.cls
+++ b/HomeWork1.cls
@@ -92,4 +92,5 @@ public with sharing class HomeWork1 {
     }
 
 }
+System.debug();
 ///////////////////////////////////////////////////////////////////////////////////////////////
